@@ -1,3 +1,10 @@
+2014-10-03  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/man.c (get_manpage_node): Make returned node safely 
+	free-able with free_history_node.
+	(xrefs_of_manpage): Initialize line_number fields of REFERENCE 
+	objects.
+
 2014-11-02  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/Plaintext.pm (_convert), 
